syntax = "proto3";

package scrayosnet.passage.adapter;

message Target {
    string identifier = 1;
    Address address = 2;
    repeated MetaEntry meta = 3;
}

message Address {
    string hostname = 1;
    uint32 port = 2;
}

message MetaEntry {
    string key = 1;
    string value = 2;
}
